@@ -12,6 +12,9 @@ PyVISA Changelog
   This changes should affect a minority of user and does not change the behavior for
   instrument returning #0 (only the value of data_length as returned by
   parse_ieee_block_header is affected and functions using it have been adapted).
+- allow trailing separators in ascii blocks PR #581
+  Numpy style extraction already handled this case correctly but it was not so
+  for the builtin parser.
 
 1.11.3 (07-11-2020)
 -------------------
